Dockerize application. Fix project README (#72).